# xpid2

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
dui_install/DUI2-2025.12.5/src/dui2/client/tests/: test_connect_get_threshold_mask_slice.py
dui_install/dui_cmd_tools/: dui2  dui2_client_app  dui2_server_side
src/xpid/: __init__.py  cli.py  config.py  core.py  geometry.py  io.py  output.py  prep.py  resolver.py  ss.py  topology.py
src/xpid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: test_geometry.py  test_integration.py
