[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpid"
version = "2.1.0"
description = "Industrial-grade detector for XH-pi interactions in protein structures."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gemmi",
    "numpy"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
xpid = "xpid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xpid*"]
namespaces = false