[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpid"
version = "2.1.2"
description = "Detector for XH-pi interactions in protein structures."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "gemmi",
    "numpy"
]

[project.urls]
Homepage = "https://github.com/SeanWang5868/xpid2"
Repository = "https://github.com/SeanWang5868/xpid2"
Issues = "https://github.com/SeanWang5868/xpid2/issues"

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
xpid = "xpid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xpid*"]
namespaces = false